# bsv-brc-python

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: README.md  brc105_client.py  brc105_minimal_server.py
src/bsv_brc/: __init__.py
src/bsv_brc/brc052/: __init__.py  aes.py  certificate.py
src/bsv_brc/brc094/: __init__.py  linkage.py  schnorr.py
src/bsv_brc/brc103/: __init__.py  handshake.py  nonce.py  session.py  signing.py  types.py  wallet.py
src/bsv_brc/brc104/: __init__.py
src/bsv_brc/brc104/adapters/: __init__.py
src/bsv_brc/brc104/core/: __init__.py  headers.py  preimage.py
src/bsv_brc/brc105/: __init__.py  challenge.py  client.py  middleware.py  nonce.py  types.py
src/bsv_brc/crypto/: __init__.py  keys.py
tests/: test_brc052_aes.py  test_brc052_certificate.py  test_brc052_keys.py  test_brc094.py  test_brc103_nonce.py  test_brc103_signing.py  test_brc103_types.py  test_brc104_headers.py  test_brc104_preimage.py  test_brc105.py  test_brc105_middleware.py
